# kicad-panel-tools-plugin

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: FREECAD_ROADMAP.md  SPEC_SCHEMA.md  _config.yml  exporting.md  index.md  installation.md  kicad-setup.md  panel-layout.md
examples/: classes.specs.yaml  sample.net.xml  sample.specs.yaml
harness/: __init__.py  cables.py  cli.py  engine.py  model.py  numbering.py  persist.py  review.py  specs.py  wireviz.py  yamlio.py
harness/_vendor/: README.md  wireviz_renderer.py
harness/emit/: __init__.py  panel_diagram_svg.py  wirelist_csv.py  wireviz_yaml.py
harness/ingest/: __init__.py  base.py  kicad_ipc.py  kicad_netlist.py  pcbnew_board.py
kicad_plugin/: README.md  __init__.py  __main__.py  core.py  icon.xpm  panel_device_wizard.py  review_dialog.py  wire_numbers_dialog.py
pcm/: metadata.json
scripts/: build_pcm.py  gen_panel_library.py
templates/kicad_panel/: harness_specs.yaml  kicad_panel.kicad_pcb  kicad_panel.kicad_prl  kicad_panel.kicad_pro  kicad_panel.kicad_sch
tests/: mock_pcbnew.py  test_action_plugin_registration.py  test_board_adapter.py  test_extra_and_passthrough.py  test_integration_pcbnew.py  test_multiconductor.py  test_numbering_and_wireviz.py  test_panel_diagram.py  test_panel_wizard.py  test_pcm_package.py  test_persistence.py  test_plugin_core.py  test_precedence.py  test_renumber.py  test_review_dialog.py  test_review_table.py  test_wire_name_plugin.py  test_wire_numbers_dialog.py  test_wireviz_render.py
(+4 files in other folders)
