[project]
name = "harness_engine"
version = "0.2.0"
description = "KiCad-agnostic wire-harness documentation engine"
requires-python = ">=3.10"
# none required: a pure-Python PyYAML is vendored (harness/_vendor) as fallback
dependencies = []

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
